--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "getindexify",
   "version": "0.0.10",
   "description": "This is the TypeScript client for interacting with the Indexify service.",
-  "main": "./dist/index.ts",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "langchain": "^0.1.21",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.2",
