--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -70,6 +70,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - id: version_extraction
-        run: echo "version=$(cat package.json | jq .version' | xargs)" >> "$GITHUB_OUTPUT"
+        run: echo "version=$(cat package.json | jq .version | xargs)" >> "$GITHUB_OUTPUT"
 
   
