--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,3 +1,5 @@
+name: Publish TypeScript Client
+
 on:
   workflow_dispatch:
     inputs:
@@ -26,6 +28,8 @@ jobs:
         with:
           node-version: "20"
       - run: npm ci
+      - name: Build
+        run: cd packages/langchain && npm run build
       - uses: JS-DevTools/npm-publish@v3
         with:
           package: packages/langchain
@@ -42,8 +46,11 @@ jobs:
         with:
           node-version: "20"
       - run: npm ci
+      - name: Build
+        run: npm run build
       - uses: JS-DevTools/npm-publish@v3
         with:
+          package: ./
           token: ${{ secrets.NPM_TOKEN }}
 
   create-release:
