add getindexify as dependency

--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tensorlakeai/indexify-typescript-client#readme",
   "dependencies": {
+    "getindexify": "^0.0.16",
     "langchain": "^0.1.21"
   },
   "devDependencies": {
