--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "getindexify",
-  "version": "0.0.28",
+  "version": "0.0.29",
   "description": "This is the TypeScript client for interacting with the Indexify service.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -31,6 +31,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "crypto": "^1.0.1"
   }
 }
