update langchain retriever to use dist

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,7 +21,7 @@ jobs:
     name: Publish Langchain Retriever to npm
     runs-on: ubuntu-latest
     needs:
-      - create-release
+      - publish-client
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
