--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/tensorlakeai/indexify-typescript-client#readme",
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
+    "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -32,6 +34,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "crypto": "^1.0.1"
+    "crypto-js": "^4.2.0",
+    "uuid": "^9.0.1"
   }
 }
